> 2.3.4
 - Optimize the speed of genotyping when some sites have very high coverage (>500M bases).
   Now sub-sampling to keep a random set of 10,000 bases for such sites.
 - Add two methods to AlignmentReader to determine the minimum and maximum genomic locations represented
   in the reader. This is useful when suggesting slices to split a set of alignments. This commit includes
   a fix for possible null start or end positions in slices generated with suggest-position-slices.
 - Fix a problem with run-in-parallel where some threads would never finish when they do not detect
   the keyword. Now indicate that the thread finished so that others can start when the processing
   completes.
 - reads-file-stats: remove any path from basename in the output.

2.3.3
 - IterateSortedAlignmentsListImpl: Use a WarningCounter to limit warnings to 10 instances. This is needed to
   avoid writing Gb of log output when the threshold is met.
 - discover-sequence-variants somatic output: Make it possible to run a simple trio design by removing the
   requirement for a germline sample.
 - discover-sequence-variants somatic output: Earlier versions were reporting somatic variation candidates
   when two parents are homozygotes and the somatic samples was Het (the fisher p-value with each parent is
   very significant in this case, but does not indicate a somatic change). This also improves q-values because
   they are less results that need to be corrected.
 - discover-sequence-variants somatic output: Add an error message when a sample is mis-spelled in the covariates
   file.
 - Refactor code base to keep base counts for forward and reverse strands separately in SampleCountInfo.
 - Normalize somatic priority score by number of mapped reads, and number of parents and germline samples used in
   the calculation.
 - Add a StrandBiasFilter in somatic analyses. The filter rejects variations that are not represented on both