@@ -1,6 +1,8 @@
 > 2.3.4
  - Optimize the speed of genotyping when some sites have very high coverage (>500M bases).
-   Now sub-sampling to keep a random set of 10,000 bases for such sites.
+   Now sub-sampling to keep a random set of 10,000 bases for such sites. Expose the default
+   sub-sample size with a dynamic option called sub-sample-size in IterateSortedAlignmentsListImpl.
+   (-x IterateSortedAlignmentsListImpl:sub-sample-size <int>)
  - Add two methods to AlignmentReader to determine the minimum and maximum genomic locations represented
    in the reader. This is useful when suggesting slices to split a set of alignments. This commit includes
    a fix for possible null start or end positions in slices generated with suggest-position-slices.
